# ==============================================================================
# Gradus Plugin Tests
# ==============================================================================

add_executable(gradus_tests
    unit/test_main.cpp

    # Ring geometry unit tests (no VSTGUI dependency)
    unit/ui/ring_geometry_tests.cpp

    # Pin flag strip (v1.6 Step Pinning UI) unit tests
    unit/ui/pin_flag_strip_tests.cpp

    # Markov matrix editor unit tests
    unit/ui/markov_matrix_editor_tests.cpp

    # Speed curve data model unit tests
    unit/ui/speed_curve_data_tests.cpp

    # Arp param save/load round-trip guardrail over the shared 3000-3372 range (D3)
    unit/parameters/arpeggiator_params_test.cpp

    # VST3 validation and parameter tests
    unit/vst/gradus_vst_tests.cpp

    # State v2 -> v3 migration tests (spec 142)
    unit/vst/state_v2_v3_migration_test.cpp

    # Sequencer Note lane (lane 10) tests (spec 142, Phase 3)
    unit/processor/arpeggiator_core_sequencer_test.cpp
    unit/processor/sequencer_polymetric_test.cpp
    unit/processor/sequencer_rests_advance_test.cpp
    unit/processor/live_mode_byte_identical_test.cpp

    # Held-note transposition semantics tests (spec 142, Phase 4, US2)
    unit/processor/source_mode_transpose_test.cpp

    # FR-022 inertness + source toggle hygiene tests (spec 142, Phase 7, US5)
    unit/processor/source_mode_toggle_test.cpp

    # Sequencer transport-gating tests (spec 142, FR-031 at the Processor boundary)
    unit/processor/sequencer_transport_gating_test.cpp

    # Live-mode transport Play-edge hygiene (audit F3)
    unit/processor/live_mode_play_edge_test.cpp

    # MIDI-delay lane metadata reaches the engine (audit F14)
    unit/processor/midi_delay_lane_metadata_test.cpp

    # Deactivation must not strand sounding notes (audit F4)
    unit/processor/set_active_flush_test.cpp

    # Piano-roll view tests (spec 142, Phase 6, US3)
    unit/ui/piano_roll_view_test.cpp
    unit/ui/piano_roll_playhead_test.cpp
    unit/ui/piano_roll_visibility_test.cpp

    # Editor open/close lifecycle regression (willClose UAF guard)
    unit/ui/editor_lifecycle_test.cpp

    # Ring edit routing / geometry seeding lane-order guard (audit F11 + F12)
    unit/ui/ring_edit_routing_test.cpp

    # Processor/Controller implementation (needed by plugin shell tests)
    ${CMAKE_CURRENT_SOURCE_DIR}/../src/processor/processor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../src/controller/controller.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../src/controller/controller_arp.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../src/controller/controller_verify_view.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../src/controller/controller_view_sync.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../src/controller/controller_presets.cpp
    ${vst3sdk_SOURCE_DIR}/public.sdk/source/common/memorystream.cpp

    # SDK hosting helpers (HostMessage, HostAttributeList) for IMessage tests
    ${vst3sdk_SOURCE_DIR}/public.sdk/source/vst/hosting/hostclasses.cpp
    ${vst3sdk_SOURCE_DIR}/public.sdk/source/vst/hosting/pluginterfacesupport.cpp

    # Stubs for GetPluginFactory/moduleHandle + SDK module init (Linux linker)
    vstgui_test_stubs.cpp
    ${vst3sdk_SOURCE_DIR}/public.sdk/source/main/moduleinit.cpp
    ${vst3sdk_SOURCE_DIR}/public.sdk/source/main/pluginfactory.cpp
)

target_link_libraries(gradus_tests
    PRIVATE
        KrateDSP
        KratePluginsShared
        Catch2::Catch2
        test_helpers
        vstgui_support
        sdk
)

target_include_directories(gradus_tests
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/../src
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_SOURCE_DIR}/tests
        ${vst3sdk_SOURCE_DIR}
        ${vst3sdk_SOURCE_DIR}/vstgui4
)

target_compile_features(gradus_tests PRIVATE cxx_std_20)

# ==============================================================================
# Test Fixtures (spec 142: v2 migration regression artifacts)
# ==============================================================================
# Binary state fixtures + golden MIDI captures live in tests/fixtures/ and are
# committed to the repo (generated by tools/gen_v2_fixtures on the pre-feature
# parent commit). Pass the absolute path to the fixtures directory as a compile
# definition so tests can locate them regardless of the test executable's
# working directory.
target_compile_definitions(gradus_tests
    PRIVATE
        GRADUS_FIXTURES_DIR="${CMAKE_CURRENT_SOURCE_DIR}/fixtures"
        # Absolute path to the plugin's UI resources so the editor-lifecycle
        # harness can locate editor.uidesc without a plugin bundle.
        GRADUS_RESOURCES_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../resources"
)

# Compiler warnings matching the plugin target
if(MSVC)
    target_compile_options(gradus_tests PRIVATE
        /W4
        /permissive-
        /Zc:__cplusplus
        /wd4100
        /wd4458
    )
else()
    target_compile_options(gradus_tests PRIVATE
        -Wall
        -Wextra
        -Wpedantic
        -Wno-unused-parameter
    )
endif()

# CTest Integration
catch_discover_tests(gradus_tests REPORTER console)
